--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--Hello, this is a group project by covenant university students of CSC310 GROUP 18-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="style2.css">
 </head>
 <body>
+    <!--the main components of the starting page like buttons,headers e.t.c are created in this body section-->
     <h1>Welcome!</h1>
     <h2>CSC310 GROUP18</h2>
     <div class="wrapper">
