--- a/j_calc.html
+++ b/j_calc.html
@@ -1,3 +1,4 @@
+<!--this is the html file for the calculator where the buttons,containers e.t.c are created-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,6 +9,7 @@
 </head>
 <link rel="stylesheet" href="style.css">
 <body>
+    <!-- this section creates the buttons to be used in the calculator-->
     <div class="keys">
         <div class="container">
             <div class="button" id="answer"> </div>
