--- a/page.html
+++ b/page.html
@@ -1,3 +1,4 @@
+<!-- This is the source code form the biodata section of the project which contains the biodata of of each memeber of the group-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="style3.css">
 </head>
     <a href="index.html"><button>Back</button></a>
+    <!--This sections creates a container to hold the name and other neccesary informationn about the members of the group-->
 <H1>Group members</H1>
 <body>
     <div class="wrapper">
