--- a/page.html
+++ b/page.html
@@ -30,11 +30,11 @@
                 <div class="label">D.O.B:22/07/2003</div>
             </div>
             <div class="mem3">
-                <div class="pic"><img src="female profile.jpeg" alt="example"></div>
+                <div class="pic"><img src="female.jpeg" alt="example"></div>
                 <div class="label">Name:Chinedu-Ndah Ebube</div>
                 <div class="label">Mat No:20cg028058</div>
                 <div class="label">Sex:Female</div>
-                <div class="label">D.O.B:14/10/2003</div>
+                <div class="label">D.O.B:24/05/2005</div>
             </div>
             <div class="mem4">
                 <div class="pic"><img src="male profile.png" alt="example"></div>
@@ -44,25 +44,25 @@
                 <div class="label">D.O.B:16/03/2003</div>
             </div>
             <div class="mem5">
-                <div class="pic"> </div>
-                <div class="label">Name:Amiteye ofeoritse favour</div>
-                <div class="label">Mat No:20ch028153</div>
-                <div class="label">Sex:Male</div>
-                <div class="label">D.O.B:14/10/2003</div>
+                <div class="pic"><img src="female.jpeg" alt="example"></div>
+                <div class="label">Name:Emeieje Ajirioghen Glory</div>
+                <div class="label">Mat No:20CG028078</div>
+                <div class="label">Sex:Female</div>
+                <div class="label">D.O.B:02/04/2004</div>
             </div>
             <div class="mem6">
-                <div class="pic"> </div>
-                <div class="label">Name:Amiteye ofeoritse favour</div>
-                <div class="label">Mat No:20ch028153</div>
+                <div class="pic"><img src="male profile.png" alt="example"></div>
+                <div class="label">Name:Ibitowa Ooreoluwa</div>
+                <div class="label">Mat No:20CH028086</div>
                 <div class="label">Sex:Male</div>
-                <div class="label">D.O.B:14/10/2003</div>
+                <div class="label">D.O.B:12/06/2002</div>
             </div>
             <div class="mem7">
-                <div class="pic"> </div>
-                <div class="label">Name:Amiteye ofeoritse favour</div>
-                <div class="label">Mat No:20ch028153</div>
+                <div class="pic"><img src="male profile.png" alt="example"></div>
+                <div class="label">Name: Ibeh chidera Elijah</div>
+                <div class="label">Mat No:20CG028085</div>
                 <div class="label">Sex:Male</div>
-                <div class="label">D.O.B:14/10/2003</div>
+                <div class="label">D.O.B:16/09/2003</div>
             </div>    
         </div>
     </div>
