--- a/j_calc.html
+++ b/j_calc.html
@@ -11,6 +11,7 @@
 <body>
     <!-- this section creates the buttons to be used in the calculator-->
     <div class="keys">
+        <a href="index.html"><button>Back</button></a>
         <div class="container">
             <div class="button" id="answer"> </div>
             <div class="clearbutton" id="clear"><button style="background-color: grey;font-weight:bold; color:white;"> C</button></div>
