--- a/j_calc.html
+++ b/j_calc.html
@@ -10,8 +10,10 @@
 <link rel="stylesheet" href="style.css">
 <body>
     <!-- this section creates the buttons to be used in the calculator-->
+    <div class="b_button">
+        <a href="project.html"><button>Back</button></a>
+    </div>
     <div class="keys">
-        <a href="index.html"><button>Back</button></a>
         <div class="container">
             <div class="button" id="answer"> </div>
             <div class="clearbutton" id="clear"><button style="background-color: grey;font-weight:bold; color:white;"> C</button></div>
