--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="wrapper">
         <div class="container">
             <a href="page.html"><button>Group members</button></a>
-            <a href="j_calc.html"><Button>Arithemetic calculation</Button></a>
+            <a href="j_calc.html"><Button>Arithmetic calculation</Button></a>
         </div>
     </div>
     
