--- a/j_calc.html
+++ b/j_calc.html
@@ -11,7 +11,7 @@
 <body>
     <!-- this section creates the buttons to be used in the calculator-->
     <div class="b_button">
-        <a href="project.html"><button>Back</button></a>
+        <a href="index.html"><button>Back</button></a>
     </div>
     <div class="keys">
         <div class="container">
